fixed spacing

--- a/Opozee.WebApp/ClientApp/src/assets/css/questionlisting.css
+++ b/Opozee.WebApp/ClientApp/src/assets/css/questionlisting.css
@@ -130,7 +130,7 @@ border-radius: 50%;
 .inner_pages .cover_questions {
   padding: 15px;
   padding-bottom: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   background: #FFF;
   border-radius: 4px;
   border: 0.5px solid rgba(0,0,0,0.2);
